--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 </div>
 
                 <div class="dashes">
-                    <div class="dash">________________</div>
+                    <div class="dash">eeeeeeeeeeeeeeeeeee</div>
                     <div class="or">or</div>
-                    <div class="dash">________________</div>
+                    <div class="dash">eeeeeeeeeeeeeeeeeeee</div>
                 </div>
 
                 <div class="email">
