--- a/index.html
+++ b/index.html
@@ -13,123 +13,134 @@
     <main>
         <section class="div-cover">
             <div class="first">
-                <nav>
-                    <div class="logo">
-                        <img src="logo.jpg" alt="logo pics">
+
+                <div class="first-div-nav">
+                    <img src="logo.jpg" alt="logo pics">
+                    <p>Untitled Ul</p>
+                </div>
+
+                <div class="firstCont">
+
+                    <div class="welcome">
+                        <h1>Welcome back, Olivia</h1>
+                        <p>welcome back! Please enter your details.</p>
                     </div>
 
-                    <p class="title">Untitled Ul</p>
-
-                </nav>
-
-                <h1>Welcome back, Olivia</h1>
-                <p class="welcome">Welcome back! Please enter your details.</p>
-                <div class="log-in">
-                    <img src="google logo.png" alt="google logo">
-                    <p class="google">Log in with Google</p>
-                </div>
-
-                <div class="dashes">
-                    <div class="dash">eeeeeeeeeeeeeeeeeee</div>
-                    <div class="or">or</div>
-                    <div class="dash">eeeeeeeeeeeeeeeeeeee</div>
-                </div>
-
-                <div class="email">
-                    <div>
-                        <label for="email"></label>
-                        <br>
-                        <input type="text" placeholder="Email">
-
+                    <div class="google">
+                        <img src="google logo.png" alt="google logo">
+                        <p>Log in with Google</p>
                     </div>
-                </div>
 
-                <div class="password">
-                    <div>
-                        <label for="password"></label>
-                        <br>
-                        <input type="password" placeholder="Password">
+                    <div class="or">
+                        <p></p>
+                        <span>or</span>
+                        <p></p>
                     </div>
-                </div>
 
-                <div class="check">
-                    <input type="checkbox">
-                    <label for="remember"><span>Remember for 30 days</span></label>
-                    <p class="for">Forgot password</p>
-                </div>
+                    <div class="email">
+                        <label for="email">Email</label>
+                        <input type="text">
+                    </div>
 
-                <div>
-                    <button>Log in</button>
-                </div>
+                    <div class="email">
+                        <label for="password">Password</label>
+                        <input type="password">
+                    </div>
 
-                <div class="sign-up">
-                    <p>Don't have an account?<span>Sign up for free</span></p>
+                    <div class="remember">
+                        <div class="checkbox">
+                            <input type="checkbox">
+                            <p>Remember for 30 days</p>
+                        </div>
+
+                        <div class="forgot">
+                            <p>Forgot password</p>
+                        </div>
+                    </div>
+
+                    <div class="button">
+                        <button>Log in</button>
+                    </div>
+
+                    <div class="sign-up">
+                        <p>Don't have an account? <span>Sign up for free</span></p>
+                    </div>
                 </div>
             </div>
 
 
-            <div class="image">
-                <div class="mirror"></div>
-                <div class="note">
-                    <p>we move 10x faster than our peers
-                        <br>
-                        and stay consistent. While they're
-                        <br>
-                        bogged down with design debt,
-                        <br>
-                        we're releasing new features.
-                    </p>
+            <div class="second">
+
+                <div class="mirror">
+                    <img src="glass.jpg" alt="glass pics">
                 </div>
 
-                <div class="hall">
-                    <p class="sophie">Sophie Hall
-                    </p>
-
-                    <div class="starsss">
-                        <span class="star">
-                            <label for="star1" title="1star">&#9733;</label>
-                        </span>
-
-                        <span class="star">
-                            <label for="star2" title="2stars">&#9733;</label>
-                        </span>
-
-                        <span class="star">
-                            <label for="star3" title="3stars">&#9733;</label>
-                        </span>
-
-                        <span class="star">
-                            <label for="star4" title="4stars">&#9733;</label>
-                        </span>
-
-                        <span class="star">
-                            <label for="star5" title="5stars">&#9733;</label>
-                        </span>
-                    </div>
-                </div>
-
-                <div class="footer">
-                    <div class="founder">
-                        <p>Founder, Catalog</p>
+                <div class="secondCont">
+                    <div class="note">
+                        <p>we move 10x faster than our peers
+                            <br>
+                            and stay consistent. While they're
+                            <br>
+                            bogged down with design debt,
+                            <br>
+                            we're releasing new features.
+                        </p>
                     </div>
 
-                    <div class="agency">
-                        <p class="agency">Web Design Agency</p>
+                    <div class="hall">
+
+                        <div class="sophie">
+                            <p class="sophie">Sophie Hall</p>
+                        </div>
+
+                        <div class="starsss">
+                            <span class="star">
+                                <label for="star1" title="1star">&#9733;</label>
+                            </span>
+
+                            <span class="star">
+                                <label for="star2" title="2stars">&#9733;</label>
+                            </span>
+
+                            <span class="star">
+                                <label for="star3" title="3stars">&#9733;</label>
+                            </span>
+
+                            <span class="star">
+                                <label for="star4" title="4stars">&#9733;</label>
+                            </span>
+
+                            <span class="star">
+                                <label for="star5" title="5stars">&#9733;</label>
+                            </span>
+                        </div>
+                    </div>
+
+                    <div class="footer">
+
+                        <div class="founder-and-agency">
+                            <div class="founder">
+                                <p>Founder, Catalog</p>
+                            </div>
+
+                            <div class="agency">
+                                <p class="agency">Web Design Agency</p>
+                            </div>
+                        </div>
+
+
+                        <div class="direction">
+                            <i class="fa fa-arrow-left" aria-hidden="true"></i>
+                            <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                        </div>
                     </div>
                 </div>
-
-                <div class="direction">
-                    <i class="fa fa-arrow-left" aria-hidden="true"></i>
-                    <i class="fa fa-arrow-right" aria-hidden="true"></i>
-                </div>
-
-            </div>
             </div>
         </section>
     </main>
 
     <footer>
-        
+
     </footer>
 </body>
 
